# philipshue

./: .travis.yml  Cargo.toml  README.md
examples/: discover_bridge.rs  discover_bridge_upnp.rs  get_all_groups.rs  get_all_lights.rs  register_user.rs  set_light_state.rs
src/: bridge.rs  errors.rs  hue.in.rs  hue.rs  json.in.rs  lib.rs
