[package]

name = "philips_hue_client"
version = "0.4.0"
authors = [
  "Mathieu Poumeyrol <kali@zoy.org>",
  "Bjarke Sørensen <bs@wasd.dk>",
  "Lucas Falch Sørensen <lucas@wasd.dk>",
  "Joost Yervante Damad <joost@damad.be>"
]
description = "Rust library for Philips Hue lights"
homepage = "https://github.com/andete/philipshue"
repository = "https://github.com/andete/philipshue"
readme = "README.md"
license = "MIT"
keywords = [ "Philips", "hue", "light", "bulb" ]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
regex = "0.1.17"
serde = "0.8"
serde_json = "0.8"
lazy_static = "0.2.1"

[dependencies.hyper]
version = "0.9.11"
default-features = false
features = ["ssl", "serde-serialization"]
